--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingBottom="2dp">
 
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/checkbox_for_task"
@@ -27,10 +30,13 @@
 
     <ImageView
         android:id="@+id/iv_priority_flag"
-        android:layout_width="0dp"
-        android:layout_height="15dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="225dp"
-        android:src="@drawable/ic_flags" />
+        android:layout_alignTop="@id/tv_task_title"
+        android:layout_alignBottom="@id/tv_task_title"
+        android:layout_marginEnd="15dp"
+        android:src="@drawable/ic_flags"
+        android:contentDescription="@string/priority_flag" />
 
 </RelativeLayout>
