--- a/app/src/main/res/menu/menu_top_fragment_task.xml
+++ b/app/src/main/res/menu/menu_top_fragment_task.xml
@@ -7,13 +7,13 @@
         android:icon="@drawable/ic_search"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/menu_action_sort"
         android:icon="@drawable/ic_sort"
         android:title="@string/sort"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
         <menu>
             <item android:id="@+id/submenu_action_sort_by_name"
                 android:title="@string/sort_by_name" />
