--- a/app/src/main/res/layout/fragment_auth_start.xml
+++ b/app/src/main/res/layout/fragment_auth_start.xml
@@ -1,40 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#F5F5F5">
 
     <TextView
-        android:id="@+id/app_name"
+        android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/todo_list"
-        android:textSize="23sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ib_sign_in" />
+        android:fontFamily="@font/font_family_atkinson_hyperlegible"
+        android:text="To-Do List App"
+        android:textColor="#262627"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="200dp"/>
 
-    <Button
-        android:id="@+id/ib_sign_in"
+    <TextView
+        android:id="@+id/tv_app_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        android:textSize="19sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
-        app:layout_constraintEnd_toStartOf="@id/ib_sign_up"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
-        android:id="@+id/ib_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up"
-        android:textSize="19sp"
-        app:layout_constraintStart_toEndOf="@id/ib_sign_in"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_below="@id/tv_app_name"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:ellipsize="none"
+        android:fontFamily="@font/font_family_atkinson_hyperlegible"
+        android:gravity="center"
+        android:text="Get your things done.\nAnywhere. Anytime."
+        android:textColor="#262627"
+        android:textSize="25sp"
+        android:textStyle="normal" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_sign_in_with_google"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        android:layout_width="250dp"
+        android:layout_height="55dp"
+        android:elevation="3dp"
+        android:layout_below="@id/tv_app_description"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="150dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/font_family_atkinson_hyperlegible"
+        android:text="@string/sign_in_with_google"
+        android:textColor="#606060"
+        android:textStyle="normal"
+        app:icon="@drawable/ic_google_logo"
+        app:iconGravity="textStart"
+        app:iconPadding="10dp"
+        app:iconSize="25dp"
+        app:iconTint="@null" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_sign_in_with_email"
+        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+        android:layout_width="250dp"
+        android:layout_height="55dp"
+        android:elevation="3dp"
+        android:layout_below="@id/btn_sign_in_with_google"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#EC4639"
+        android:fontFamily="@font/font_family_atkinson_hyperlegible"
+        android:text="@string/sign_in_with_email"
+        android:textColor="#FFFFFF"
+        android:textStyle="normal"
+        app:icon="@drawable/ic_email"
+        app:iconGravity="textStart"
+        app:iconPadding="20dp"
+        app:iconSize="29dp"
+        app:iconTint="@null" />
+
+</RelativeLayout>
